data/issues_nolabel/nolabel_test_17432.txt
"tensorflow/core/platform/posix/net.cc:75:17: error: invalid 'asm': invalid operand for code 'w'    actual_port = ntohs(addr.sin_port);" Error While Cross Compiling for Raspberry Pi 3 with the given script "build_raspberry_pi.sh"

System information


Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No, Using the provided Script(build_raspberry_pi.sh)


OS Platform and Distribution (e.g., Linux Ubuntu 16.04): 16.04LTS


TensorFlow installed from (source or binary): Source


TensorFlow version (use command below): 1.6.0


Python version:  2.7


Bazel version (if compiling from source): 0.8.0


GCC/Compiler version (if compiling from source): arm-linux-gnueabihf-gcc 4.9


CUDA/cuDNN version:No


GPU model and memory: NO


Exact command to reproduce: ./tensorflow/tools/ci_build/pi/build_raspberry_pi.sh


Describe the problem
I'm trying to cross compile tensorflow for Raspberry Pi 3 and I'm following the below steps,
**1:- Cloning Tensorflow 1.6.0
2:- Installing Bazel 0.8.0
3:- Running the script ./tensorflow/tools/ci_build/pi/build_raspberry_pi.sh**
Getting Error:-
"tensorflow/core/platform/posix/net.cc:60:19: error: invalid 'asm': invalid operand for code 'w'
addr.sin_port = htons(static_cast<uint16_t>(*port));
^
tensorflow/core/platform/posix/net.cc:75:17: error: invalid 'asm': invalid operand for code 'w'
actual_port = ntohs(addr.sin_port);"
Note:-
"error: invalid 'asm': invalid operand for code 'w'", Chances are, if you got this error then you were cross-compiling, probably from an x86 or x86_64 host to an ARM target. The error most likely occurred when you used, directly or indirectly, a network byte order translation function from the C library like htons(), or ntohl().
Source code / logs
GNU C++ (crosstool-NG crosstool-ng-1.22.0-88-g8460611) version 4.9.3 (arm-linux-gnueabihf)
compiled by GNU C version 4.8.4, GMP version 6.0.0, MPFR version 3.1.3, MPC version 1.0.3
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
Compiler executable checksum: 5490cb547d5e63dcf8255bc3ba4b9a59
In file included from /usr/include/bits/byteswap.h:35:0,
from /usr/include/endian.h:60,
from /usr/include/bits/waitstatus.h:64,
from /usr/include/stdlib.h:42,
from /home/baladev/.cache/bazel/_bazel_baladev/da0e175f87e998fe3d550279550cec2c/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/cstdlib:72,
from # tensorflow/core/platform/posix/net.cc:19:
tensorflow/core/platform/posix/net.cc: In function 'bool tensorflow::internal::{anonymous}::IsPortAvailable(int*, bool)':
tensorflow/core/platform/posix/net.cc:60:19: error: invalid 'asm': invalid operand for code 'w'
addr.sin_port = htons(static_cast<uint16_t>(*port));
^
tensorflow/core/platform/posix/net.cc:75:17: error: invalid 'asm': invalid operand for code 'w'
actual_port = ntohs(addr.sin_port);
^